[gd_scene load_steps=11 format=3 uid="uid://db26m2afepnbf"]

[ext_resource type="Script" path="res://Areas/Hutan/Environment/Api/api.gd" id="1_ktts3"]
[ext_resource type="PackedScene" uid="uid://cxp32tjv0xv5n" path="res://scene/ability/lemparBotol_controller/lempar_botol_controller.tscn" id="3_d3h3s"]
[ext_resource type="Texture2D" uid="uid://iic0xk2717jy" path="res://Areas/Hutan/Environment/Api/api.png" id="4_em6x0"]
[ext_resource type="Texture2D" uid="uid://doiov7l26pmts" path="res://asset/environtment/light.png" id="4_jvi2h"]
[ext_resource type="PackedScene" uid="uid://ca2363tgce87v" path="res://Areas/Hutan/UI/Position_Indicator/possindicator.tscn" id="5_e64ov"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xnkky"]
radius = 31.0644

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b14ok"]
size = Vector2(17, 35)

[sub_resource type="Animation" id="Animation_kv01d"]
resource_name = "menyala"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375, 1, 1.0625, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vf0gu"]
_data = {
"menyala": SubResource("Animation_kv01d")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_plxj5"]
radius = 33.0606

[node name="api" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_ktts3")

[node name="Area2D" type="Area2D" parent="." groups=["api"]]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xnkky")

[node name="abilityManager" type="Node" parent="."]

[node name="lemparBotolController" parent="abilityManager" instance=ExtResource("3_d3h3s")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 19.995)
texture = ExtResource("4_em6x0")
offset = Vector2(0, -49.875)
hframes = 4
vframes = 5
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_b14ok")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vf0gu")
}
autoplay = "menyala"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="api_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="api_hitbox"]
shape = SubResource("CircleShape2D_plxj5")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.352941, 0, 1)
energy = 0.7
shadow_enabled = true
shadow_filter_smooth = 50.0
texture = ExtResource("4_jvi2h")
texture_scale = 0.8

[node name="poss" parent="." instance=ExtResource("5_e64ov")]
position = Vector2(23.3246, 6.83794)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="api_hitbox" to="." method="_on_api_hitbox_body_entered"]
[connection signal="body_exited" from="api_hitbox" to="." method="_on_api_hitbox_body_exited"]
